--- a/app/index.html
+++ b/app/index.html
@@ -4,6 +4,7 @@
 
     <!-- angular -->
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.8.2/angular.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-md5/0.1.10/angular-md5.js"></script>
 
     <!-- bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
@@ -16,6 +17,7 @@
     <script src="js/app.js"></script>
     <script src="js/services/apiCredentials.js"></script>
     <script src="js/controllers/personagemCtrl.js"></script>
+    <script src="config/config.js"></script>
 
     <!-- app styles -->
     <link rel="stylesheet" href="css/main.css">
