--- a/app/index.html
+++ b/app/index.html
@@ -16,6 +16,7 @@
     <!-- app scripts -->
     <script src="js/app.js"></script>
     <script src="js/services/apiCredentials.js"></script>
+    <script src="js/services/personagemService.js"></script>
     <script src="js/controllers/personagemCtrl.js"></script>
     <script src="config/config.js"></script>
 
