--- a/app/index.html
+++ b/app/index.html
@@ -5,6 +5,7 @@
     <!-- angular -->
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.8.2/angular.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-md5/0.1.10/angular-md5.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-route/1.8.2/angular-route.min.js" integrity="sha512-5zOAub3cIpqklnKmM05spv4xttemFDlbBrmRexWiP0aWV8dlayEGciapAjBQWA7lgQsxPY6ay0oIUVtY/pivXA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 
     <!-- bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
@@ -17,8 +18,10 @@
     <script src="js/app.js"></script>
     <script src="js/services/apiCredentials.js"></script>
     <script src="js/services/personagemService.js"></script>
-    <script src="js/controllers/personagemCtrl.js"></script>
+    <script src="js/controllers/listaPersonagensCtrl.js"></script>
+    <script src="js/controllers/detalhePersonagensCtrl.js"></script>
     <script src="config/config.js"></script>
+    <script src="config/routeConfig.js"></script>
 
     <!-- app styles -->
     <link rel="stylesheet" href="css/main.css">
@@ -29,10 +32,12 @@
     <title>Marvel App</title>
 
   </head>
-  <body ng-controller="personagemCtrl">
-    <div ng-include="'view/header.html'"></div>
-    <div ng-include="'view/searchBar.html'"></div>
-    <div ng-include="'view/listarPersonagens.html'"></div>
-    <div ng-include="'view/footer.html'"></div>
+  <body>
+    <div class="wrapper">
+      <div ng-include="'view/header.html'"></div>
+      <div ng-view></div>
+      <div ng-include="'view/footer.html'"></div>
+    </div>
+    
   </body>
 </html>
