--- a/app/index.html
+++ b/app/index.html
@@ -18,10 +18,14 @@
     <script src="js/app.js"></script>
     <script src="js/services/apiCredentials.js"></script>
     <script src="js/services/personagemService.js"></script>
+    <script src="js/services/loginService.js"></script>
     <script src="js/controllers/listaPersonagensCtrl.js"></script>
     <script src="js/controllers/detalhePersonagensCtrl.js"></script>
+    <script src="js/controllers/loginCtrl.js"></script>
     <script src="config/config.js"></script>
     <script src="config/routeConfig.js"></script>
+
+    <script src="external/dirPagination.js"></script>
 
     <!-- app styles -->
     <link rel="stylesheet" href="css/main.css">
@@ -35,7 +39,7 @@
   <body>
     <div class="wrapper">
       <div ng-include="'view/header.html'"></div>
-      <div ng-view></div>
+      <div class="h-full" ng-view></div>
       <div ng-include="'view/footer.html'"></div>
     </div>
     
